--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -58,19 +58,21 @@
 </div>
 <input type="text" id="bet" maxlength='7' pattern="^[0-9]+$"/>
 
-<div class='bets-tables'>
+<table class='bets-tables'>
+	<tr><td>
 	<table class='bets-tables__table bets-red-table'>
 		<tr><td colspan=2><button class='bet-to-color bet-red'>1 — 7</button></td></tr>
 	</table>
-
+	</td><td>
 	<table class='bets-tables__table bets-green-table'>
 		<tr><td colspan=2><button class='bet-to-color bet-green'>0</button></td></tr>
 	</table>
-
+	</td><td>
 	<table class='bets-tables__table bets-black-table'>
 		<tr><td colspan=2><button class='bet-to-color bet-black'>8 — 14</button></td></tr>
 	</table>
-</div>
+	</td></tr>
+</table>
 
 
 <!-- Инвентарь -->
