--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -66,9 +66,11 @@
 							</div></td>
 					</tr></table>
 				<div class='game__start' style='display: none'><span class='game__start__button'>Начать игру</span></div>
-				<table class='bot-inventory'>
-				</table>
-				<table class='player-inventory'>
+				<table class="inventory-tables-holder">
+					<tr>
+						<td><table class='bot-inventory'></table></td>
+						<td><table class='player-inventory'></table></td>
+					</tr>
 				</table>
 			</div>
 
