--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -20,6 +20,7 @@
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
+<script src="../scripts/inventory.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
@@ -43,6 +44,8 @@
 	</div>
 	
 	<table id="search_result"></table>
+	<div class="sales">
+	</div>
 	
 	<div id="weaponInfoContainer" style="display: none;">
 	<div class="glassBlur" style='width: 100%; height: 100%;'></div>
