--- a/OpenCase/RUS/faq.html
+++ b/OpenCase/RUS/faq.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 	<head>
 		<title>FAQ</title>
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
