--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -1,4 +1,5 @@
-﻿<html><head>
+﻿<!DOCTYPE html>
+<html><head>
 <title>Список кейсов</title>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
