Concat scripts & fixes
Исправлена игра КМБ (ошибка с большими ценами и зависанием).
Изменен алгоритм заполнения рулетки.
Добавлена проверка ника на валидность.

--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -10,24 +10,11 @@
 <link rel="stylesheet" type="text/css" href="../css/coinflip.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
-<script src="../scripts/skinNames.js"></script>
-<script src="../scripts/cases2.js"></script>
-<script src="../scripts/quality.js"></script>
-<script src="../scripts/prices.js"></script>
-<script src="../scripts/inventory.js"></script>
-<script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/md5-min.js"></script>
+<script src="../scripts/build/min/basic.js"></script>
+<script src="../scripts/build/min/cases.js"></script>
 
-<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
 <script src="../scripts/coinflip.js"></script>
-
-<script src="../scripts/localization.js"></script>
-
 </head>
 <body data-localization='coinflip'>
 <div class="navigationBar" data-menu-EN="Coinflip" data-menu-RU="Монетка"></div>
