--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>
 <title>Double</title>
 <!-- Стили -->
@@ -9,25 +10,12 @@
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 
 
-<!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
-<script src="../scripts/cases2.js"></script>
-<script src="../scripts/skinNames.js"></script>
-<script src="../scripts/quality.js"></script>
-<script src="../scripts/prices.js"></script>
-<script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
-<script src="../scripts/inventory.js"></script>
-<script src="../scripts/md5-min.js"></script>
+<script src="../scripts/build/basic.js"></script>
 
-<script src="../scripts/navigationMenu.js"></script>
+<script src="../scripts/build/cases.js"></script>
+
 <link rel="stylesheet" href="../css/navigationMenu.css">
 <link rel="stylesheet" type="text/css" href="../css/double.css">
-
-<script src="../scripts/localization.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 
