--- a/OpenCase/RUS/inventory.html
+++ b/OpenCase/RUS/inventory.html
@@ -10,20 +10,12 @@
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" href="../css/lobibox.min.css"/>
 
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
+<script src="../scripts/build/min/basic.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/quality.js"></script>
 
-<script src="../scripts/navigationMenu.js"></script>
-
-<script src="../scripts/localization.js"></script>
-<script src="../scripts/lobibox.min.js"></script>
 </head>
 <body data-localization="inventory" data-inventory='no-load'>
 <div class="navigationBar" data-menu-EN="Inventory" data-menu-RU="Мой инвентарь"></div>
