--- a/OpenCase/RUS/open.html
+++ b/OpenCase/RUS/open.html
@@ -2,20 +2,13 @@
 <html>
 <head>
 <title>Открытие кейса</title>
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
-<script src="../scripts/cases2.js"></script>
-<script src="../scripts/quality.js"></script>
-<script src="../scripts/skinNames.js"></script>
-<script src="../scripts/prices.js"></script>
-<script src="../scripts/openCase.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
-
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
+
+<script src="../scripts/build/min/basic.js"></script>
+<script src="../scripts/build/min/cases.js"></script>
+
 </head>
 <body data-localization="openCase" data-inventory="no-load">
 
@@ -37,6 +30,8 @@
 <span class="win_quality"></span>
 <span class="win_price"></span>
 <img src="" class="win_img">
+
+<!--<button class="win_sell sell-double">Продать</button>-->
 </div>
 
 <button class="openCase">Открыть кейс</button>
