--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -9,24 +9,14 @@
 <link rel="stylesheet" type="text/css" href="../css/lobibox.min.css"/>
 <link rel="stylesheet" type="text/css" href="../css/iconselect/iconselect.css">
 
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
+<script src="../scripts/build/min/basic.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/md5-min.js"></script>
 
-<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
-
-<script src="../scripts/localization.js"></script>
 
 <!--IconSelect-->
 <script src="../scripts/iconselect/iconselect.js"></script>
 <script src="../scripts/iconselect/iscroll.js"></script>
-
-<script src="../scripts/lobibox.min.js"></script>
 <style>
 body {
     color: #fff;
@@ -317,8 +307,25 @@ $(function() {
 
 $("#submit").on("click", function() {
 	var nick = $("#nickname").val();
-	if (nick != "")
-		saveStatistic("playerNickname", nick);
+	var validation = /^[a-zA-Zа-яёА-ЯЁ0-9_-]+$/;
+	if (nick != "" && validation.test(nick)) {
+		saveStatistic("playerNickname", nick)
+	} else {
+		Lobibox.notify('error', {
+			pauseDelayOnHover: false,
+			continueDelayOnInactiveTab: false,
+			width: $(window).width(),
+			position: 'top center',
+			icon: false,
+			title: Localization.settings2.notValidNicknameTitle[Settings.language],
+			delay: 4000,
+			size: 'mini',
+			showClass: 'fadeInDown',
+			hideClass: 'fadeOutUp',
+			msg: Localization.settings2.notValidNickname[Settings.language]
+		});
+		return false;
+	}
 	var lang = $('#language option:selected').val();
 		saveStatistic('settings_language', lang);
 	saveStatistic('settings_sounds', $('input[name="sounds"]').prop('checked'));
