--- a/OpenCase/RUS/apps.html
+++ b/OpenCase/RUS/apps.html
@@ -1,17 +1,11 @@
 ﻿<html>
 	<head>
 		<title>Другие приложения</title>
-		<script src="../scripts/jquery.min.js"></script>
-		<script src="../scripts/jquery.cookie.js"></script>
-		<script src="../scripts/main.js"></script>
-		<script src="../scripts/settings.js"></script>
+		<script src="../scripts/build/min/basic.js"></script>
 		<script src="../../android/apps.js"></script>
-
-		<script src="../scripts/navigationMenu.js"></script>
+		
 		<link rel="stylesheet" href="../css/navigationMenu.css" />
-
-		<script src="../scripts/localization.js"></script>
-
+		
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	</head>
