--- a/OpenCase/RUS/faq.html
+++ b/OpenCase/RUS/faq.html
@@ -5,16 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
 		
-		<script src="../scripts/jquery.min.js"></script>
-		<script src="../scripts/jquery.cookie.js"></script>
-		<script src="../scripts/main.js"></script>
-		<script src="../scripts/settings.js"></script>
-		<script src="../scripts/cases2.js"></script>
-
-		<script src="../scripts/navigationMenu.js"></script>
+		<script src="../scripts/build/min/basic.js"></script>
 		<link rel="stylesheet" href="../css/navigationMenu.css" />
-
-		<script src="../scripts/localization.js"></script>
 
 	<style>
 		body {
@@ -67,10 +59,6 @@
 				<li>
 					<span class='question' id='js-local-question-rank'>Как поднять ранг?</span>
 					<span class='answer' id='js-local-answer-rank'>Чтобы повысить ранг, нужно заработать очки. Очки, даются за следующие действия:<ul><li>Открыть приложение — <i class='js-var' data-var='DAILY_REWARD_POINTS'></i> очков (награда даётся раз в день)</li><li>Открыть кейс — <i class='js-var' data-var='OPEN_CASE_REWARD_POINTS'></i> очко</li><li>Победить в мини-игре — <i class='js-var' data-var='GAME_WIN_REWARD_POINTS'></i> очка</li></ul></span>
-				</li>
-				<li>
-					<span class='question' id='js-local-question-doublePoints'>Где можно потратить очки дабла?</span>
-					<span class='answer' id='js-local-answer-doublePoints'>На данный момент - нигде. Торговая площадка в разработке. Там можно будет использовать валюту дабла.</span>
 				</li>
 				<li>
 					<span class='question' id='js-local-question-3'>Я нашел ошибку, что делать?</span>
