--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -12,21 +12,10 @@
 <link rel="stylesheet" type="text/css" href="../css/marketplace.css">
 
 <!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
-<script src="../scripts/cases2.js"></script>
-<script src="../scripts/skinNames.js"></script>
-<script src="../scripts/quality.js"></script>
-<script src="../scripts/prices.js"></script>
-<script src="../scripts/inventory.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/build/min/basic.js"></script>
+<script src="../scripts/build/min/cases.js"></script>
 
-<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
-
-<script src="../scripts/localization.js"></script>
 
 <script src="../scripts/marketplace.js"></script>
 <style>
