--- a/OpenCase/RUS/ranks.html
+++ b/OpenCase/RUS/ranks.html
@@ -8,16 +8,9 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 
 <!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/build/min/basic.js"></script>
 
-<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
-
-<script src="../scripts/localization.js"></script>
 <style>
 #containter {
 	font-family: Lato;
