Return to backup

--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -7,11 +7,20 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" href="../css/lobibox.min.css"/>
 
-<script src="../scripts/build/min/basic.js"></script>
-<script src="../scripts/build/min/cases.js"></script>
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+<script src="../scripts/skinNames.js"></script>
+<script src="../scripts/cases2.js"></script>
+<script src="../scripts/openCase.js"></script>
 
+<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
 
+<script src="../scripts/localization.js"></script>
+<script src="../scripts/lobibox.min.js"></script>
 </head>
 <body data-localization="cases" data-inventory="no-load">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
