--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿
 <html>
 <head>
 <title>Джекпот</title>
@@ -10,10 +10,25 @@
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 
 <!-- Скрипты -->
-<script src="../scripts/build/min/basic.js"></script>
-<script src="../scripts/build/min/cases.js"></script>
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+<script src="../scripts/cases2.js"></script>
+<script src="../scripts/skinNames.js"></script>
+<script src="../scripts/quality.js"></script>
+<script src="../scripts/prices.js"></script>
+<script src="../scripts/progressbar.min.js"></script>
+<script src="../scripts/jackpotBots.js"></script>
+<script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/inventory.js"></script>
 
+<script src="../scripts/md5-min.js"></script>
+
+<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
+
+<script src="../scripts/localization.js"></script>
 
 </head>
 <body data-localization="jackpot" data-inventory='no-load'>
