--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -8,10 +8,20 @@
 <link rel="stylesheet" type="text/css" href="../css/rps.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 
-<script src="../scripts/build/min/basic.js"></script>
-<script src="../scripts/build/min/cases.js"></script>
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+<script src="../scripts/skinNames.js"></script>
+<script src="../scripts/cases2.js"></script>
+<script src="../scripts/quality.js"></script>
+<script src="../scripts/prices.js"></script>
+<script src="../scripts/inventory.js"></script>
 
+<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
+
+<script src="../scripts/localization.js"></script>
 
 </head>
 <body data-localization='rps'>
