--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -1,9 +1,15 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html><html>
 <head>
 <meta charset="utf-8">
-<script src="../scripts/build/min/basic.js"></script>
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+
+<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
+
+ <script src="../scripts/localization.js"></script> 
 
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
