--- a/OpenCase/RUS/news.html
+++ b/OpenCase/RUS/news.html
@@ -2,13 +2,19 @@
 <html>
 	<head>
 		<title>Обновления</title>
-		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="../css/main.css" />
-		<script src="../scripts/build/min/basic.js"></script>
+		<script src="../scripts/jquery.min.js"></script>
+		<script src="../scripts/jquery.cookie.js"></script>
+		<script src="../scripts/main.js"></script>
+		<script src="../scripts/settings.js"></script>
 
+		<script src="../scripts/navigationMenu.js"></script>
 		<link rel="stylesheet" href="../css/navigationMenu.css" />
+		
+		<script src="../scripts/localization.js"></script>
 		<script src="../scripts/news.js"></script>
 
+		<link rel="stylesheet" type="text/css" href="../css/fonts.css" />
+		<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	</head>
 	<style>
 		body {
