--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -9,14 +9,23 @@
 <link rel="stylesheet" type="text/css" href="../css/lobibox.min.css"/>
 <link rel="stylesheet" type="text/css" href="../css/iconselect/iconselect.css">
 
-<script src="../scripts/build/min/basic.js"></script>
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
+<script src="../scripts/md5-min.js"></script>
 
 <link rel="stylesheet" href="../css/navigationMenu.css">
+
+<script src="../scripts/localization.js"></script>
 
 <!--IconSelect-->
 <script src="../scripts/iconselect/iconselect.js"></script>
 <script src="../scripts/iconselect/iscroll.js"></script>
+
+<script src="../scripts/lobibox.min.js"></script>
 <style>
 body {
     color: #fff;
