--- a/OpenCase/RUS/statistic.html
+++ b/OpenCase/RUS/statistic.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 <title>Статистика</title>
-<script src="../scripts/build/min/basic.js"></script>
+<script src="../scripts/jquery.min.js"></script>
+<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
 
+<script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
+
+<script src="../scripts/localization.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
