--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -9,7 +9,7 @@
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
 
- <script src="../scripts/localization.js"></script> 
+ <script src="../scripts/localization.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -48,7 +48,9 @@ li b {
 VLADOS776<br>
 <ul>
 <li><b>Steam</b>: <a href="https://steamcommunity.com/id/vanushka2004" target="_blank">vanushka2004</a></li>
-<li><b>Email</b>: kurtukovvlad@gmail.com</li></ul>
+<li><b>Email</b>: kurtukovvlad@gmail.com</li>
+<li><b>Patreon</b>: <a href="https://www.patreon.com/VLADOS776" target="_black">VLADOS776</a></li>
+</ul>
 <span id='local-1'>Если Вы обнаружили ошибки, или у Вас есть предложение, напишите на почту.</span><br>
 <span id='local-2'>Если хотите поблагодарить разработчика, можете подарить что-нибудь в стиме :)</span><br>
 <span id='local-3'>Не забудьте поставить оценку в маркете ^_^</span>
