Spinking mobile test

--- a/OpenCase/RUS/spinking.html
+++ b/OpenCase/RUS/spinking.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/spinking.css">
+<link rel="stylesheet" type="text/css" href="../css/animate.css">
 
 <!-- Скрипты -->
 <script src="../scripts/jquery.min.js"></script>
@@ -21,7 +22,8 @@
 <script src="../scripts/progressbar.min.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 <!-- <script src="../scripts/inventory.js"></script> -->
-<script src="../scripts/spinking.js"></script>
+<script src="../scripts/build/common.js"></script>
+<script src="../scripts/build/spinking.js"></script>
 
 <script src="../scripts/md5-min.js"></script>
 
@@ -46,6 +48,7 @@
 <div class="win"></div>
 <div class='buttons'>
 	<button id="addItems">Внести предметы</button>
+	<button id="spin" onclick="spinking.spin();">Spin</button>
 </div>
 <ul class="winList"></ul>
 
