--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -61,7 +61,7 @@ VLADOS776<br>
 </ul>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
-<p id='secret' style='display:none'><a href='market.html'>Market</a></p>
+<p id='secret' style='display:none'><a href='spinking.html'>Spinking</a></p>
 </div>
 <script>
 	if (Player.nickname == 'VLADOS776') $("#secret").css('display', 'block')
