Double - fix. Libs

--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -8,8 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../css/rps.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/skinNames.js"></script>
@@ -44,9 +43,9 @@
 		<button class='choice__hand' data-choice='paper'><div class='hand paper'></div></button>
 	</div>
 	<button class='add-item'>Внести оружие</button>
-	
+
 	<ul class='winItems'></ul>
-	
+
 	<!-- Инвентарь -->
 	<div class="inventoryList" style="display: none;">
 		<span id="intentory-Player"></span>
@@ -54,7 +53,7 @@
 		<ul class="inventory"><li></li></ul>
 		<button class="choseItems">Внести</button>
 	</div>
-	
+
 </div>
 <!-- <script src="../scripts/rulet.js"></script> -->
 <script src="../scripts/rps.js"></script>
