--- a/OpenCase/RUS/inventory.html
+++ b/OpenCase/RUS/inventory.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Инвентарь</title>
 	<link rel="stylesheet" href="../css/navigationMenu.css">
 	<link rel="stylesheet" type="text/css" href="../css/rarity.css">
@@ -10,9 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/loading.css">
 	<link rel="stylesheet" href="../css/lobibox.min.css" />
 
-	<script src="../scripts/jquery.min.js"></script>
-	<script src="../scripts/jquery-ui.min.js"></script>
-	<script src="../scripts/jquery.cookie.js"></script>
+	<script src="../scripts/build/libs.js"></script>
 	<script src="../scripts/main.js"></script>
 	<script src="../scripts/settings.js"></script>
 	<script src="../scripts/cases2.js"></script>
@@ -23,7 +22,6 @@
 	<script src="../scripts/navigationMenu.js"></script>
 
 	<script src="../scripts/localization.js"></script>
-	<script src="../scripts/lobibox.min.js"></script>
 </head>
 
 <body data-localization="inventory" data-inventory='no-load'>
@@ -617,5 +615,4 @@
 		})
 	</script>
 </body>
-
 </html>
