--- a/OpenCase/RUS/open.html
+++ b/OpenCase/RUS/open.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>Открытие кейса</title>
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
@@ -11,7 +10,6 @@
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/openCase.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -69,11 +67,11 @@ $(function(){
 			opened = parseInt(client.getStatistic("case-"+cases[caseId].name));
 		else
 			opened = $.cookie("case-"+cases[caseId].name, Number)
-			
+
 		$("#opened").text(opened);
-		
+
 		document.title = "Открытие кейса — "+cases[caseId].name;
-		
+
 		fillCarusel(caseId);
 	}
 });
