--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -8,22 +8,19 @@
 <link rel="stylesheet" type="text/css" href="../css/rulet.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
+<link rel="stylesheet" type="text/css" href="../css/animate.css">
 
 <!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
-<script src="../scripts/progressbar.min.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
 <script src="../scripts/inventory.js"></script>
 
-<script src="../scripts/md5-min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
@@ -57,7 +54,7 @@
 		<option value="5" data-min="200" data-max="5000000" id='local-dif-legendary'>Легендарно $200 - $∞</option>
 	</select>
 </div>
-<table class="items"><tr></tr></table>
+<ul class="items"></ul>
 
 <!-- Инвентарь -->
 <div class="inventoryList" style="display: none;">
