--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" href="../css/lobibox.min.css"/>
 
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/skinNames.js"></script>
@@ -20,7 +18,6 @@
 <link rel="stylesheet" href="../css/navigationMenu.css">
 
 <script src="../scripts/localization.js"></script>
-<script src="../scripts/lobibox.min.js"></script>
 </head>
 <body data-localization="cases" data-inventory="no-load">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
