--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -10,8 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../css/coinflip.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/skinNames.js"></script>
@@ -20,7 +19,6 @@
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/inventory.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/md5-min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
