--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -11,8 +11,7 @@
 
 
 <!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
@@ -20,10 +19,7 @@
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
 <script src="../scripts/inventory.js"></script>
-<script src="../scripts/md5-min.js"></script>
-
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
 <link rel="stylesheet" type="text/css" href="../css/double.css">
