--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -12,8 +12,7 @@
 <link rel="stylesheet" type="text/css" href="../css/marketplace.css">
 
 <!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
@@ -21,7 +20,6 @@
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/inventory.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
@@ -42,11 +40,11 @@
 		<i class="fa fa-search" aria-hidden="true"></i>
 		</span>
 	</div>
-	
+
 	<table id="search_result"></table>
 	<div class="sales">
 	</div>
-	
+
 	<div id="weaponInfoContainer" style="display: none;">
 	<div class="glassBlur" style='width: 100%; height: 100%;'></div>
 	<div class="fullWeaponInfo" >
