--- a/OpenCase/RUS/spinking.html
+++ b/OpenCase/RUS/spinking.html
@@ -11,16 +11,13 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 
 <!-- Скрипты -->
-<script src="../scripts/jquery.min.js"></script>
-<script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
-<script src="../scripts/progressbar.min.js"></script>
-<script src="../scripts/jquery-ui.min.js"></script>
 <!-- <script src="../scripts/inventory.js"></script> -->
 <script src="../scripts/build/common.js"></script>
 <script src="../scripts/build/spinking.js"></script>
@@ -46,6 +43,7 @@
 </div>
 
 <div class="win"></div>
+<
 <div class='buttons'>
 	<button id="addItems">Внести предметы</button>
 	<button id="spin" onclick="spinking.spin();">Spin</button>
