--- a/OpenCase/RUS/spinking.html
+++ b/OpenCase/RUS/spinking.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../css/spinking.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
-<link rel="stylesheet" href="../css/Lobibox.css">
+<link rel="stylesheet" href="../css/lobibox.min.css">
 
 <!-- Скрипты -->
 <script src="../scripts/build/libs.js"></script>
