--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -417,6 +417,7 @@ $(document).on('click', '#code-confirm', function() {
     description: '+50000 double credits'
   }, {
     simpleCode: 'localServer',
+    code: '',
     action: 'location="http://192.168.1.205:8080"',
     description: 'Go to local web server.'
   }
