--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -409,15 +409,18 @@ $(document).on('click', '#local-local', function() {
 $(document).on('click', '#code-confirm', function() {
 	var codesList = [{
 		code: 'f8d6dd190baff0de491c8fae6399cd64',
+    multiply: false,
 		action: 'saveStatistic("doubleBalance", Player.doubleBalance+=183875)',
 		description: '+183875 double credits'
 	}, {
     code: 'fe63765176c7bd5b069d4e6c7eee3d34',
+    multiply: false,
     action: 'saveStatistic("doubleBalance", Player.doubleBalance+=50000)',
     description: '+50000 double credits'
   }, {
     simpleCode: 'localServer',
     code: '',
+    multiply: true,
     action: 'location="http://192.168.1.205:8080"',
     description: 'Go to local web server.'
   }
@@ -436,7 +439,7 @@ $(document).on('click', '#code-confirm', function() {
 	var msg = "";
 	for (var i = 0; i < codesList.length; i++)
 		if (codesList[i].code == codeHex || (typeof codesList[i].simpleCode !="undefined" && codesList[i].simpleCode == code))
-			if (getStatistic('code-'+code, 'none') == 'none') {
+			if (getStatistic('code-'+code, 'none') == 'none' || codesList[i].multiply) {
 				eval(codesList[i].action);
 				saveStatistic('code-'+code, 'activated');
 				msg = codesList[i].description;
